--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </label>
                 <select id="age_range" class="" name="Fascia d'età">
                     <option value="under_age">
-                        Minorenni
+                        Minorenne
                     </option>
                     <option value="standard">
                         Standard
